# kate

./: .gitignore  CONTRIBUTING.MD  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  TODO.md  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: todo.md
.github/workflows/: docs.yml  lint.yml  release.yml
cli/: all.html  fn.main.html  fn.test_init.html  index.html  sidebar-items.js
cli/args/: enum.Command.html  index.html  struct.Cli.html
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/kate/: all.html  fn.main.html  fn.start.html  index.html  sidebar-items.js
examples/: Args.java  ExitCode.java  LargeTypes.java  Main.java  Signatures.java
interpreter/: all.html  index.html  macro.arg.html  macro.class.html  macro.field.html  macro.instance_method!.html  macro.instance_method.html  macro.internal.html  macro.internalise!.html  macro.internalise.html  macro.pop.html  macro.static_method.html  sidebar-items.js  struct.Context.html  struct.ThrownState.html  struct.VM.html
interpreter/bytecode/: enum.Progression.html  fn.decode_instruction.html  index.html  sidebar-items.js  trait.Instruction.html
interpreter/error/: enum.Throwable.html  enum.VMError.html  index.html  sidebar-items.js  struct.Frame.html  struct.RuntimeException.html
interpreter/interpreter/: index.html  sidebar-items.js  struct.ExecutionContext.html  struct.Interpreter.html
interpreter/native/: enum.NativeFunction.html  index.html  sidebar-items.js  trait.NativeModule.html  type.NameAndDescriptor.html  type.NativeInstanceFunction.html  type.NativeStaticFunction.html
interpreter/object/: index.html  sidebar-items.js
interpreter/opcode/: enum.Opcode.html  index.html  sidebar-items.js  struct.TableSwitch.html
interpreter/runtime/: index.html  sidebar-items.js
interpreter_two/: all.html  index.html  macro.arg.html  macro.class.html  macro.field.html  macro.instance_method.html  macro.internal!.html  macro.internal.html  macro.pop.html  macro.static_method!.html  macro.static_method.html  sidebar-items.js  struct.Context.html  struct.ThrownState.html  struct.VM.html
jit/: all.html  fn.add.html  index.html
parse/: all.html  index.html  sidebar-items.js
sources/cli/: Cargo.toml
sources/cli/src/: args.rs  main.rs
sources/interpreter/: Cargo.toml
sources/interpreter/src/: interpreter.rs  lib.rs  opcode.rs
sources/interpreter/src/bytecode/: binary.rs  invoke.rs  load_store.rs  mod.rs  ops.rs  unary.rs
sources/interpreter/src/error/: mod.rs
sources/interpreter/src/native/: io.rs  jdk.rs  lang.rs  mod.rs  security.rs
sources/interpreter/src/native/old/: jdk.rs  lang.rs
sources/interpreter/src/object/: builtins.rs  interner.rs  layout.rs  loader.rs  mem.rs  mod.rs  numeric.rs  runtime.rs
sources/interpreter/src/runtime/: bootstrap.rs  classloader.rs  mod.rs  native.rs  object.rs  stack.rs
sources/interpreter_two/: Cargo.toml
sources/interpreter_two/src/: lib.rs
sources/interpreter_two/src/bytecode/: binary.rs  invoke.rs  load_store.rs  mod.rs  ops.rs  unary.rs
sources/interpreter_two/src/error/: mod.rs
sources/interpreter_two/src/native/: lang.rs  mod.rs
sources/interpreter_two/src/object/: array.rs  classloader.rs  mod.rs  numeric.rs  statics.rs  string.rs
src/: classfile.rs  main.rs  types.rs
support/: all.html  index.html  sidebar-items.js
test_old/: run-tests.py
tests/: .gitignore  Cargo.toml  basic.rs  before-test.rs  bugs.rs  captures.rs  execution.rs  jdk.rs  program.rs  run-tests.py
tests/common/: bin.rs  helper.rs  integrated.rs  mod.rs
tests/include/kate/: Util.java
tests/instruction/: AThrow.java  BiPush.java  FAdd.java  IAdd.java  IRem.java  ISub.java  LongConsts.java  Methods.java  Primitives.java  ReferenceArray.java  Return.java  TryCatch.java
tests/java/: mod.rs
tests/java/lang/: mod.rs  string.rs
tests/java/lang/string/: IsBlank.java  IsEmpty.java
tests/java/util/: abstract_collection.rs  abstract_list.rs  abstract_map.rs  array_list.rs  mod.rs
tests/java/util/abstract_collection/: ACToString.java
tests/java/util/abstract_list/: ALCheckForComodification.java  ALHasNextAfterException.java
tests/java/util/abstract_map/: AMClone.java  AMEquals.java  AMSimpleEntries.java  AMToString.java
tests/java/util/array_list/: AddAll.java
tests/util/: builder.rs  mod.rs
(+1020 files in other folders)
