[workspace]
members = [
    "sources/*",
    "tests"
]

[workspace.dependencies]
anyhow = "1.0.68"
paste = "1.0.11"
bytes = "1.3.0"
enum-as-inner = "0.5.1"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
parking_lot = "0.12"
thiserror = "1.0.50"

[lints.clippy]
enum_glob_use = "warn"
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

# [package]
# name = "kate"
# version = "0.0.1"
# description = "A JVM, written in rust"
# repository = "https://github.com/nullishamy/kate"
