[workspace]
members = [
    "sources/*",
    "tests"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.68"
paste = "1.0.11"
bytes = "1.3.0"
enum-as-inner = "0.5.1"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
parking_lot = "0.12"
thiserror = "1.0.50"
lazy_static = "1.4.0"

[lints.clippy]
enum_glob_use = "warn"
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"