[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
interpreter = { path = "../sources/interpreter/" }
runtime = { path = "../sources/runtime/" }
support = { path = "../sources/support/" }
proc = { path = "../sources/proc/" }
lazy_static = { workspace = true }

[[test]]
name = "captures"
path = "captures.rs"

[[test]]
name = "basic"
path = "basic.rs"