[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
interpreter = { path = "../sources/interpreter/" }
runtime = { path = "../sources/runtime/" }
support = { path = "../sources/support/" }
proc = { path = "../sources/proc/" }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
assert_cmd = "2.0.14"

[[test]]
name = "captures"
path = "captures.rs"

[[test]]
name = "basic"
path = "basic.rs"

[[test]]
name = "program"
path = "program.rs"

[[test]]
name = "bugs"
path = "bugs.rs"