[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parse = { path = '../parse/' }
interpreter_two = { path = '../interpreter_two/' }
clap = { version = "4.4.6", features = ['derive'] }
