[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
parse = { path = '../parse/' }
interpreter = { path = '../interpreter/' }
runtime = { path = '../runtime/' }
support = { path = '../support/' }
clap = { version = "4.4.6", features = ['derive'] }
