[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse = { path = '../parse/' }
support = { path = '../support/' }
enum-as-inner = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
lazy_static = "1.4.0"
send_wrapper = "0.6.0"
